src/test/deca/syntax/invalid/created/test_invalid_cast.deca
{
   // Erreur syntaxique attendue 
   // car elle attend une parenthèse ouvrante après (int)
   (int) 5; 
}